k8s/staging/auth.svc.yml
################### Deployment ###################
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-dpl
  namespace: staging

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth
          image: yessinerekik/auth-service:staging-ba115df29f2c0d99bc6127f937875caa513cebc8 # change me in the pipeline
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
################### Service ###################
apiVersion: v1
kind: Service

metadata:
  name: auth-srv
  namespace: staging

spec:
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000

---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: auth-secrets
# type: Opaque
# data:
#   jwt-access-secret: <access_secret>
#   jwt-refresh-secret: <refresh_secret>

# kubectl create secret generic auth-secrets \
#   --from-literal=jwt-access-secret='access_secret' \
#   --from-literal=jwt-refresh-secret='refresh_secret' \
#   -n staging

################### Database Deployment ###################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-dpl
  namespace: staging

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: mongo
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
################### Database Service ###################
apiVersion: v1
kind: Service

metadata:
  name: auth-db-srv
  namespace: staging

spec:
  selector:
    app: auth-db
  ports:
    - port: 27017
      targetPort: 27017
